--- a/core/styles/typo/block/_paragraphs.less
+++ b/core/styles/typo/block/_paragraphs.less
@@ -96,26 +96,9 @@ p.Dropcap {
 //+++++++++++++++++//
 /*@QUASI-PARAGRAPHS*/
 //+++++++++++++++++//
-/**
-  * This interface is used on some quasi-paragraphs (paragraph-looking Objects).
-  * It is not used on `.Capt` because they can't always have `display: block;`
-@implements
-: .vru-top-phi()
-@tags
-: #typography
-: #address
-: #figure
-: #quote
-@author
-: Chris Harvey
-@updated
-: 2014-10-10
-  */
-// .quasi-p() {
-//   .vru-top-phi();
-//   padding-top: (@vru_core * @phi2);
-//   margin-top:  (@vru_core * @phi1);
-// }
+figure, blockquote, pre {
+  .vru-top-phi();
+}
 /**
   * This Object represents a generic postal address. It may be the contact address of the document
   * author(s) (contained in an `address` Element), or it may be any arbitrary postal mailing address.
@@ -161,8 +144,6 @@ p.Dropcap {
 : 2014-10-03
   */
 figure {
-  // .quasi-p();
-  // .vru-top-phi();
   .sidebrdr-phi(left;  4px; solid; @color_border);
   .sidebrdr-phi(right; 4px; solid; @color_border);
   text-align: center;
@@ -197,8 +178,6 @@ figure.Text {
 : 2015-02-11
   */
 blockquote {
-  // .quasi-p();
-  // .vru-top-phi();
   .crossgrid-lined();
   .sidebrdr-phi(left; 7px; double; @color_border);
   font-family: @fontfam_accent;
@@ -228,7 +207,6 @@ blockquote.Short {
 : 2015-02-09
   */
 pre {
-  // .vru-top-phi();
   .sidebrdr-phi(left;  3px; groove; @color_border);
   .sidebrdr-phi(right; 3px; ridge;  @color_border);
   border-radius: 6px;
